--- a/thrower/tests/utils/Makefile.am
+++ b/thrower/tests/utils/Makefile.am
@@ -1,9 +1,13 @@
-#TESTS = check_configuration
-#check_PROGRAMS = check_configuration
-#check_money_SOURCES = \
-#  check_configuration.c \
-#  $(top_builddir)/include/configuration.h
-#check_money_CFLAGS = @CHECK_CFLAGS@
-#check_money_LDADD = \
-#  $(top_srcdir)/src/configuration.a \
-#  @CHECK_LIBS@
+
+CFLAGS = @CFLAGS@ -I$(top_srcdir)/include
+
+TESTS = check_platform
+check_PROGRAMS = check_platform
+check_platform_SOURCES = \
+	check_platform.c \
+	$(top_builddir)/include/platform.h \
+	$(top_builddir)/include/tests/tests.h
+check_platform_CFLAGS = @CHECK_CFLAGS@
+check_platform_LDADD = \
+  $(top_srcdir)/src/utils/libutils.a \
+  @CHECK_LIBS@
