frozen before transition to cxx

--- a/thrower/src/utils/Makefile.am
+++ b/thrower/src/utils/Makefile.am
@@ -4,4 +4,5 @@ AM_CFLAGS = -I$(top_srcdir)/include
 
 libutils_a_SOURCES = \
   errors.c $(top_srcdir)/include/errors.h \
-  linux.c $(top_srcdir)/include/platform.h
+  linux.c $(top_srcdir)/include/platform.h \
+  collections.c $(top_srcdir)/include/collections.h
