--- a/thrower/src/Makefile.am
+++ b/thrower/src/Makefile.am
@@ -1,16 +1,2 @@
-SUBDIRS = utils
-
-AM_CFLAGS = -I$(top_srcdir)/include
-
 bin_PROGRAMS = throwerd
-throwerd_SOURCES = \
-  throwerd.c
-
-throwerd_LDADD = \
-  libconfiguration.a \
-  utils/libutils.a
-
-noinst_LIBRARIES = libconfiguration.a
-libconfiguration_a_SOURCES = \
-  configuration.c \
-  $(top_srcdir)/include/configuration.h
+throwerd_SOURCES = throwerd.cpp
