Added a poco skeleton for the application.

--- a/thrower/src/Makefile.am
+++ b/thrower/src/Makefile.am
@@ -1,2 +1,9 @@
+AM_CPPFLAGS = -std=c++0x -I$(top_srcdir)/deps/usr/include
+AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib \
+-lPocoFoundation -lPocoUtil\
+-lPocoXML
+
 bin_PROGRAMS = throwerd
-throwerd_SOURCES = throwerd.cpp
+throwerd_SOURCES = throwerd.cpp \
+  Thrower.h Thrower.cpp \
+  Configuration.h Configuration.cpp
