--- a/thrower/configure.ac
+++ b/thrower/configure.ac
@@ -16,6 +16,7 @@ AC_PROG_CXX
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
-                 src/Makefile])
+                 src/Makefile
+                 test/Makefile])
 
 AC_OUTPUT
