--- a/thrower/.gitignore
+++ b/thrower/.gitignore
@@ -19,10 +19,7 @@ config.sub
 #compile files
 .deps
 *.[oa]
-!*.[ch]
+!*.cpp
+!*.h
 src/throwerd
-tests/check_configuration
-tests/utils/check_collections
-tests/utils/check_errors
-tests/utils/check_platform
-tests/utils/check_strings
+test/test
