Minor changes of logging.

--- a/thrower/test/Makefile.am
+++ b/thrower/test/Makefile.am
@@ -8,6 +8,6 @@ bin_PROGRAMS = test
 test_LDADD=$(top_srcdir)/deps/usr/lib/libgmock_main.a \
   $(top_srcdir)/deps/usr/lib/libgmock.a \
   $(top_srcdir)/deps/usr/lib/libgtest.a \
-  $(top_srcdir)/src/liblogger.a \
-  $(top_srcdir)/src/libconfiguration.a 
+  $(top_srcdir)/src/libconfiguration.a \
+  $(top_srcdir)/src/liblogger.a 
 test_SOURCES = ConfigurationTest.cpp
