--- a/thrower/src/Makefile.am
+++ b/thrower/src/Makefile.am
@@ -1,5 +1,6 @@
 AM_CPPFLAGS = -std=c++11 -I$(top_srcdir)/deps/usr/include
-AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib \
+AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib
+LIBS = \
 -lPocoFoundation -lPocoUtil\
 -lPocoXML
 
@@ -7,13 +8,12 @@ bin_PROGRAMS = throwerd
 throwerd_SOURCES = throwerd.cpp
 
 throwerd_LDADD = \
-  libthrower.a \
-  libconfiguration.a \
-  liblogger.a
+  libthrower.a
 
 noinst_LIBRARIES = libthrower.a
 
 libthrower_a_SOURCES = \
   Thrower.h Thrower.cpp \
   Configuration.h Configuration.cpp \
-  Logger.h Logger.cpp
+  Logger.h Logger.cpp \
+  Exception.h Exception.cpp
