--- a/thrower/test/Makefile.am
+++ b/thrower/test/Makefile.am
@@ -1,6 +1,7 @@
 AM_CPPFLAGS = -std=c++11 -I$(top_srcdir)/deps/usr/include \
   -I$(top_srcdir)/src
-AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib \
+AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib
+LIBS= \
 -lPocoFoundation -lPocoUtil\
 -lPocoXML -lpthread
 
