Added infrastructure for the Manager class.

--- a/thrower/src/Makefile.am
+++ b/thrower/src/Makefile.am
@@ -2,7 +2,7 @@ AM_CPPFLAGS = -std=c++11 -I$(top_srcdir)/deps/usr/include
 AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib
 LIBS = \
 -lPocoFoundation -lPocoUtil\
--lPocoXML
+-lPocoXML -lPocoNet
 
 bin_PROGRAMS = throwerd
 throwerd_SOURCES = throwerd.cpp
@@ -13,8 +13,10 @@ throwerd_LDADD = \
 noinst_LIBRARIES = libthrower.a
 
 libthrower_a_SOURCES = \
+  commons.h \
   Thrower.h Thrower.cpp \
   Configuration.h Configuration.cpp \
   Logger.h Logger.cpp \
   Exception.h Exception.cpp \
-  commons.h
+  Manager.h Manager.cpp
+  
