--- a/thrower/test/Makefile.am
+++ b/thrower/test/Makefile.am
@@ -10,4 +10,5 @@ test_LDADD=$(top_srcdir)/deps/usr/lib/libgmock_main.a \
   $(top_srcdir)/deps/usr/lib/libgmock.a \
   $(top_srcdir)/deps/usr/lib/libgtest.a \
   $(top_srcdir)/src/libthrower.a
-test_SOURCES = ConfigurationTest.cpp
+test_SOURCES = ConfigurationTest.cpp \
+	ManagerTest.cpp
