Changed thrower namespace name.

--- a/thrower/test/Makefile.am
+++ b/thrower/test/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = -std=c++11 -I$(top_srcdir)/deps/usr/include \
-  -I$(top_srcdir)/src
+  -I$(top_srcdir)/src -I$(top_srcdir)/generated-src
 AM_LDFLAGS = -L$(top_srcdir)/deps/usr/lib
 LIBS= \
 -lPocoFoundation -lPocoUtil\
