Working on message transport with tests (in progress).

--- a/thrower/src/Makefile.am
+++ b/thrower/src/Makefile.am
@@ -21,5 +21,6 @@ libthrower_a_SOURCES = \
   Configuration.h Configuration.cpp \
   Logger.h Logger.cpp \
   Exception.h Exception.cpp \
-  Manager.h Manager.cpp
+  Manager.h Manager.cpp \
+  MessageTransport.h
   
