--- a/thrower/test/Makefile.am
+++ b/thrower/test/Makefile.am
@@ -11,7 +11,7 @@ test_LDADD=\
   $(top_srcdir)/deps/usr/lib/libgmock.a \
   $(top_srcdir)/deps/usr/lib/libgtest.a \
   $(top_srcdir)/src/libthrower.a \
-  $(top_srcdir)/generated-src/libproto.a
+  $(top_srcdir)/generated-src/libgaugeproto.a
 test_SOURCES = test.cpp \
   ConfigurationTest.cpp \
   ManagerTest.cpp \
